Test-cases/Errors/C20.engrad
#
# Number of atoms
#
 20
#
# The current total energy in Eh
#
   -760.453450097348
#
# The current gradient in Eh/bohr
#
       0.000314592394
      -0.000002521688
       0.000420493122
      -0.000221834769
       0.000394985987
      -0.000358720609
       0.000107773208
      -0.000482882414
      -0.000279704157
       0.000551859028
      -0.000003689094
      -0.000234653597
      -0.000267545533
      -0.000499056300
       0.000128759799
      -0.000158040756
       0.000062427649
       0.000226293434
      -0.000559081282
       0.000014512579
      -0.000254058498
      -0.000036509238
      -0.000129351274
      -0.000590801980
       0.000101964364
      -0.000304035857
       0.000109101666
      -0.000448437993
      -0.000186247098
      -0.000037971640
      -0.000104105687
       0.000302834559
      -0.000107881148
       0.000449760284
       0.000182935315
       0.000037272273
      -0.000103950072
       0.000484563416
       0.000280046466
       0.000265999391
       0.000499269754
      -0.000128047850
       0.000557070196
      -0.000012303212
       0.000254466021
       0.000219213911
      -0.000396347753
       0.000358386721
      -0.000549866177
       0.000005457294
       0.000235572995
       0.000156041637
      -0.000061840340
      -0.000227076110
       0.000035850686
       0.000129293566
       0.000590275934
      -0.000310904344
       0.000002360356
      -0.000421412200
#
# The atomic numbers and current coordinates in Bohr
#
   6    -1.8149043   -1.0929348    3.1414217 
   6    -4.0762805   -2.6481101    2.9844787 
   6    -6.2521382    2.6521969    0.7191991 
   6    -6.2885508   -1.0401820    2.9848520 
   6    -1.9210740    2.6454937    0.6814226 
   6    -5.5095617    1.5929874    3.1435219 
   6    -0.5752480   -1.4727952    0.7181226 
   6    -2.7672159    1.4820716    3.0060220 
   6    -4.0978304   -4.2381712    0.7414754 
   6    -7.7927588   -1.5520296    0.7427868 
   6    -4.0972813    3.5357284   -0.7414751 
   6    -0.4023490    0.8495883   -0.7427880 
   6    -1.9429713   -3.3546382   -0.7191989 
   6    -6.2740364   -3.3479344   -0.6814225 
   6    -7.6198647    0.7703552   -0.7181230 
   6    -4.1188327    1.9456675   -2.9844822 
   6    -1.9065597    0.3377415   -2.9848523 
   6    -2.6855517   -2.2954274   -3.1435181 
   6    -5.4278966   -2.1845144   -3.0060213 
   6    -6.3802049    0.3904925   -3.1414211 
